--- a/OASV.ipynb
+++ b/OASV.ipynb
@@ -27,7 +27,11 @@
         "The OASV is *nearly identical* to the ASV in every way, including word order, punctuation and capitalization. This ensures that the OASV has the same literal fidelity to the original Greek. However, the language of the ASV has been updated for modern readers, bringing this classic text to a new generation.\n",
         "\n",
         "\n",
-        "Importantly, the OASV is completely open-source. The full text is free to use, free to copy and free to print. Better yet, not only is the finished text freely available, but so is the entire methodology for its generation. I hope you gain something from the code presented here, but I hope even more that you benefit from reading, sharing and building upon this modern translation of the free and open Bible."
+        "Importantly, the OASV is completely open-source. The full text is free to use, free to copy and free to print. Better yet, not only is the finished text freely available, but so is the entire methodology for its generation.\n",
+        "\n",
+        "I hope you gain something from the code presented here, but I hope even more that you benefit from reading, sharing and building upon this modern translation of the free and open Bible,\n",
+        "\n",
+        "Dr. Joshua Thaxter Dickey\n"
       ],
       "metadata": {
         "id": "489AseL6UJIE"
