--- a/OASV.ipynb
+++ b/OASV.ipynb
@@ -22,9 +22,9 @@
         "**The OASV is an open-source update to the venerable 1901 American Standard Version (ASV)!**\n",
         "\n",
         "\n",
-        "The 1901 ASV is a classic English translation of the Bible. It is based on the Textus Receptus. It has high literal fidelity to the Koine Greek. And best of all, it is in the Public Domain, which means it is free to quote, reprint, copy and use for any purpose. Unfortunately, the language of the ASV is archaic, and nearly inaccessible to the modern reader.\n",
+        "The 1901 ASV is a classic English translation of the Bible. It is based on the Textus Receptus. It has high literal fidelity to the original text. And best of all, it is in the Public Domain, which means it is free to quote, reprint, copy and use for any purpose. Unfortunately, the language of the ASV is archaic, and nearly inaccessible to the modern reader.\n",
         "\n",
-        "The OASV is *nearly identical* to the ASV in every way, including word order, punctuation and capitalization. This ensures that the OASV has the same literal fidelity to the original Greek. However, the language of the ASV has been updated for modern readers, bringing this classic text to a new generation.\n",
+        "The OASV is *nearly identical* to the ASV in every way, including word order, punctuation and capitalization. This ensures that the OASV has the same literal fidelity to the ancient scriptures. However, the language of the ASV has been updated for modern readers, bringing this classic text to a new generation.\n",
         "\n",
         "\n",
         "Importantly, the OASV is completely open-source. The full text is free to use, free to copy and free to print. Better yet, not only is the finished text freely available, but so is the entire methodology for its generation.\n",
