--- a/OASV_gen.ipynb
+++ b/OASV_gen.ipynb
@@ -25,7 +25,7 @@
         "\n",
         "The 1901 ASV is a truly classic Bible, long considered to be one of the most accurate translations in the English language. It is currently in the Public Domain, which means it is free to quote, reprint, copy and use for any purpose. Unfortunately, the language of the ASV is archaic and outdated, making it nearly inaccessible to the modern reader.\n",
         "\n",
-        "The OASV is nearly identical to the ASV in every way, including word order, punctuation and capitalization. This ensures that the OASV retains the same literal fidelity to the ancient scriptures. However, the language of the OASV has been significantly updated for modern readers, bringing this classic Bible to a new generation.\n",
+        "The OASV is nearly identical to the ASV in every way, including word order, punctuation and capitalization, but the archaic language has been modernized. This ensures that the OASV retains full literal fidelity to the ancient scriptures without the ancient verbage... bringing this classic Bible to a new generation.\n",
         "\n",
         "Importantly, the OASV is completely open-source. Not only is the full text is free to use, free to copy and free to print, but the entire methodology for producing the text can be duplicated by anyone, with just a few lines of code: https://github.com/joshuadickey/OASV. This code uses the power of Artificial Intelligence to surgically remove archaic language while retaining all other features of the ASV, but there are innumerable options available, such as blending two of your favorite translations, ascribing the name of God as Yahweh or Jehovah, styling the text for children, and many more. I encourage you to explore!\n",
         "\n",
@@ -508,7 +508,7 @@
       "metadata": {
         "id": "7BJvNPr-f5JP"
       },
-      "execution_count": 54,
+      "execution_count": 57,
       "outputs": []
     },
     {
@@ -520,7 +520,7 @@
         "    <h2>Open American Standard Version (OASV)</h2>\n",
         "    <h3>The Open American Standard Version (OASV) is an open-source update to the venerable 1901 American Standard Version (ASV).</h3>\\n\n",
         "    <p>The 1901 ASV is a truly classic Bible, long considered to be one of the most accurate translations in the English language. It is currently in the Public Domain, which means it is free to quote, reprint, copy and use for any purpose. Unfortunately, the language of the ASV is archaic and outdated, making it nearly inaccessible to the modern reader.</p>\\n\n",
-        "    <p>The OASV is nearly identical to the ASV in every way, including word order, punctuation and capitalization. This ensures that the OASV retains the same literal fidelity to the ancient scriptures. However, the language of the OASV has been significantly updated for modern readers, bringing this classic Bible to a new generation.</p>\\n\n",
+        "    <p>The OASV is nearly identical to the ASV in every way, including word order, punctuation and capitalization, but the archaic language has been modernized. This ensures that the OASV retains full literal fidelity to the ancient scriptures without the ancient verbage... bringing this classic Bible to a new generation.</p>\\n\n",
         "    <p>Importantly, the OASV is completely open-source. Not only is the full text is free to use, free to copy and free to print, but the entire methodology for producing the text can be duplicated by anyone, with just a few lines of code: https://github.com/joshuadickey/OASV. This code uses the power of Artificial Intelligence to surgically remove archaic language while retaining all other features of the ASV, but there are innumerable options available, such as blending two of your favorite translations, ascribing the name of God as Yahweh or Jehovah, styling the text for children, and many more. I encourage you to explore!</p>\\n\n",
         "    <p>I pray that you benefit from reading, sharing and building upon this modern translation of the free and open Bible,</p>\\n\n",
         "    <p>Dr. Joshua Thaxter Dickey</p>\"\"\"\n",
@@ -555,11 +555,14 @@
         "html_output = html_header + html_body\n",
         "\n",
         "# Save the HTML to a file\n",
-        "text_path = f\"{OASV_path}/OASV.html\"\n",
-        "with open(text_path, \"w\") as f:\n",
-        "    f.write(html_output)\n",
+        "html_path = f\"{OASV_path}/OASV.html\"\n",
+        "with open(html_path, \"w\") as f:\n",
+        "    f.write(html_path)\n",
         "\n",
-        "print(f\"Saved the full text to {text_path}...\")"
+        "print(f\"Saved the full text to {html_path}...\")\n",
+        "\n",
+        "# Download the generated HTML file (optional)\n",
+        "files.download(html_path)"
       ],
       "metadata": {
         "id": "9v0p7VNpf3od"
@@ -573,17 +576,17 @@
         "# Define paths\n",
         "html_path = f\"{OASV_path}/OASV.html\"  # Replace with your HTML file path\n",
         "cover_path = f\"{OASV_path}/cover.png\"  # Replace with your cover image path (optional)\n",
-        "output_path = f\"{OASV_path}/OASV.epub\"\n",
+        "ebook_path = f\"{OASV_path}/OASV.epub\"\n",
         "\n",
         "# Convert HTML to EPUB using Calibre's ebook-convert\n",
-        "!ebook-convert \"{html_path}\" \"{output_path}\" \\\n",
+        "!ebook-convert \"{html_path}\" \"{ebook_path}\" \\\n",
         "  --output-profile=kindle \\\n",
         "  --max-toc-links=66 \\\n",
         "  --cover=\"{cover_path}\"  # Add this line if you have a cover image\n",
         "\n",
         "\n",
         "# Download the generated EPUB file (optional)\n",
-        "files.download(output_path)\n"
+        "files.download(ebook_path)\n"
       ],
       "metadata": {
         "id": "QysylW7IhWTT"
